# zero2prod

./: .gitignore  Cargo.toml  README  README.md
.github/workflows/: pipeline.yml  rust-ci.yml
.github/workflows/actions/: rust-cargo.yml  rust-codecov.yml
.github/workflows/rust-cargo/: action.yml
.github/workflows/rust-codecov/: action.yml
infrastructure/: main.tf  variables.tf
infrastructure/env/: dev.tfvars
src/: lib.rs  main.rs
tests/: health_check.rs
