[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.2.0"
reqwest = "0.11.10"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
